# FYP

./: .gitignore  README.md
my_robot_description/: CMakeLists.txt  README.md  package.xml
my_robot_description/launch/: gazebo.launch  model.launch  spawn_model.launch  view_model.launch
my_robot_description/rviz/: view.rviz
my_robot_description/urdf/: macros.xacro  my_robot.gazebo  my_robot.xacro  my_robot_sensors.xacro  properties.xacro
my_robot_navigation/: CMakeLists.txt  README.md  package.xml
my_robot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  mapper_params_lifelong.yaml
my_robot_navigation/launch/: amcl.launch  camera.launch  camera_tf.launch  demo_husky.launch  gmapping.launch  gmapping_ich.launch  hdl_graph_slam_400.launch  hdl_graph_slam_501.launch  hdl_localization.launch  map_server.launch  move_base.launch  multicam.launch  nav_world.launch  octomap_conversion.launch  odom_icp.launch  odom_rgbd.launch  odom_rgbd_icp.launch  one_orbbec.launch  one_orbbec_copy.launch  orbbec_only.launch  orbbec_tf_manual_2.launch  rgbd_sync.launch  rtabmap.launch  rtabmap_hector.launch  rtabmap_multicam.launch  rtabmap_orbbec.launch  rtabmap_real.launch  rtabmap_real_2Dlidar.launch  rtabmap_realsense.launch  rtabmap_sample.launch  rtabmap_sim.launch  rtabmap_sim_2Dlidar.launch  rviz.launch  slam_toolbox.launch  three_orbbec.launch  two_orbbec.launch
my_robot_navigation/maps/: map.pcd  map.yaml
my_robot_navigation/rviz/: gmapping.rviz  hdl_graph_slam.rviz  hdl_localization.rviz  rtabmap.rviz  slam_toolbox.rviz  view.rviz
(+16 files in other folders)
