<?xml version="1.0"?>
<package format="2">
  <name>my_robot_navigation</name>
  <version>0.0.0</version>
  <description>Navigation for my_robot</description>

  <author email="kuanyuee.tan@ntu.edu.sg">kuanyuee</author>
  <maintainer email="kuanyuee.tan@ntu.edu.sg">kuanyuee</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
