<?xml version="1.0"?>
<package format="2">
  <name>sensors</name>
  <version>0.0.0</version>
  <description>The sensors package</description>

  <maintainer email="kuanyuee.tan@ntu.edu.sg">kuanyuee</maintainer>

  <license>Proprietary</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
